--- a/Documentazione/main.tex
+++ b/Documentazione/main.tex
@@ -56,19 +56,18 @@ Matricola: 844936
 
 \newpage
 \section{Introduzione}
-L'obiettivo di questo progetto è quello di sviluppare un'applicazione per i produttori di birra artigianale.\\
-L'applicazione permette la registrazione degli utenti per salvare le proprie ricette, segnare l'elenco dei prodotti disponibili e la propria attrezzatura.\\
-In questo modo l'utente potrà effettuare il login con le proprie credenziali per compiere diverse operazioni:
+Con il presente progetto si è sviluppata un’applicazione per i produttori di birra artigianale. In particolare viene permessa la registrazione degli utenti, ciascuno dei quali può salvare le proprie ricette, segnare l’elenco dei prodotti disponibili e la propria attrezzatura. Una volta effettuato il login con le proprie credenziali (email e password definite nella registrazione), l’utente può compiere diverse azioni, tra cui:
 \begin{itemize}
     \item modificare il proprio account o eliminarlo;
     \item aggiungere una nuova ricetta (con prodotti, attrezzatura necessaria, preparazione e note) o eliminarne una dalla lista delle ricette;
     \item modificare una ricetta (aggiornare le note);
     \item aggiungere, rimuovere o modificare un attrezzo dalla lista delle attrezzature;
     \item aggiungere o rimuovere o modificare un prodotto alla lista dei prodotti;
-    \item consultare la lista della spesa che contiene tutti i prodotti utilizzati e le loro quantità;
-    \item scegliere la ricetta della birra da preparare ed indicarne la quantità, una volta selezionato questo gli ingredienti utilizzati saranno aggiunti alla lista della spesa;
+    \item consultare la lista della spesa che contiene tutti i prodotti impiegati nella preparazione delle ricette e le loro quantità;
+    \item scegliere la ricetta della birra da preparare, indicarne la quantità, dopodichè gli ingredienti necessari verranno aggiunti automaticamente alla lista della spesa;
     \item usare la funzionalità "Che birra faccio?" che mostrerà la ricetta che massimizza l'utilizzo degli ingredienti disponibili.
 \end{itemize}
+
 
 \newpage
 
@@ -76,96 +75,95 @@ In questo modo l'utente potrà effettuare il login con le proprie credenziali pe
 Per utilizzare questa applicazione non sono necessari particolari pre-requisiti, è sufficiente disporre di un computer.\\
 Per avviare l'applicazione è necessario eseguire i seguenti passi:
 \begin{enumerate}
-    \item aprire la cartella "ProgettoBirra"
-    \item selezionare e aprire la cartella "installer"
+    \item aprire la cartella "ProgettoBirra";
+    \item selezionare e aprire la cartella "installer";
     \item selezionare ed eseguire il file "setup.exe"\\
     comparirà la finestra sottostante\\
     \includegraphics[scale=0.30]{Immagini/imgpsh_fullsize_anim.png}
-    \item premere installa\\
+    \item premere installa.\\
     \includegraphics[scale=0.30]{Immagini/imgpsh_fullsize_anim (1).png}\\
-    Al termine dell'installazione l'applicazione partirà autonomamente. Se così non dovesse succedere la si troverà nel menù applicazione.
+    Al termine dell'installazione l'applicazione si avvierà automaticamente, in caso contrario è possibile travarla nel menù applicazione.
 \end{enumerate}
 
 \section{Funzionamento}
 \subsection{Registrazione}
-All'avvio dell'applicazione l'utente si troverà davanti una finestra così strutturata:\\\\
+All’avvio dell’applicazione viene mostrata la schermata iniziale così strutturata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form Login.jpg}
-\\Per poter usare l'applicazione è necessario avere un account, quindi come primo passo l'utente dovrà premere sul bottone "CREA ACCOUNT":\\\\
+\\Per poter utilizzare l’applicazione è necessaria la registrazione, di conseguenza il primo passo da compiere è creare un account premendo “CREA ACCOUNT”. Dopodiché verrà mostrata una finestra così organizzata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form Registrazione.jpg}
-\\Si troverà davanti a questa finestra e dopo aver compilato i campi procederà con l'iscrizione tramite il bottone "ISCRIVIMI".
-Dopo di che verrà riportato alla schermata iniziale.
+\\Una volta inseriti i dati richiesti è possibile procedere con la registrazione premendo “ISCRIVIMI”. Al termine verrà mostrata la schermata iniziale.
 \subsection{Login}
-All'avvio dell'applicazione l'utente, già registrato, si troverà davanti la schermata mostrata come prima figura, potrà compilare i campi con email e password relativi al proprio account e premere sul bottone "LOGIN", si aprirà quindi la finestra del menu:\\\\
+All’avvio dell’applicazione viene visualizzata la schermata iniziale. Dopo aver inserito le credenziali (email e password) e dopo aver premuto “LOGIN”, viene mostrata la schermata “MENU’” così strutturata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form Menu.jpg}
-\\e avrà la possibilità di scegliere tra diverse operazioni da compiere.
+\\Si può quindi notare che sono disponibili diverse funzioni.
 \subsection{Profilo}
-Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà selezionare il bottone "PROFILO"\\\\
+Premendo “PROFILO” dal MENU’ viene visualizzata una schermata “MODIFICA ACCOUNT” così organizzata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form GestioneUtente.jpg}
-\\Da questa finestra:
+\\In particolare è possibile:
 \begin{itemize}
-    \item avrà la possibilità di modificare la propria password spuntando il box "MODIFICA PASSWORD" e premendo il bottone "SALVA MODIFICHE";
-    \item potrà procedere con l'eliminazione del proprio account e di tutti i dati relativo ad esso spuntando il box "CONFERMA ELIMINAZIONE" e premendo il bottone "ELIMINA ACCOUNT".
+    \item modificare la password spuntando “MODIFICA PASSWORD” e premendo “SALVA MODIFICHE”;
+    \item eliminare l’account, e di conseguenza tutti i dati relativi ad esso, spuntando “CONFERMA ELIMINAZIONE” e premendo “ELIMINA ACCOUNT”.
 \end{itemize} 
-Al termine di queste operazioni l'utente verrà riportato alla schermata iniziale.
+Al termine di queste operazioni verrà visualizzata la schermata iniziale.
 \newpage
 \subsection{Prodotti}
-Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "PRODOTTI"\\\\
+Premendo “PRODOTTI” dal MENU’ viene visualizzata una schermata “DISPENSA” così strutturata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form GestioneProdotti.jpg}
-\\Da questa finestra potrà:
+\\Da questa finestra:
 \begin{itemize}
-    \item selezionare un prodotto presente nella lista schiacciandolo\\\\
+    \item è possibile selezionare un prodotto presente nella lista schiacciandone il nome dall'elenco visualizzato\\\\
     \includegraphics[scale=0.30]{Immagini/form/Form ModificaProd.jpg}
-    \\Da questa finestra potrà scegliere:
+    \\Da questa finestra è possibile scegliere:
         \subitem - di modificarne la quantità, scegliendo se inserire manualmente il numero oppure utilizzare le freccine, e premendo il bottone "SALVA MODIFICHE" salvare le modifiche apportate;
         \subitem - di eliminare il prodotto tramite il bottone "ELIMINA PRODOTTO".
-    \item premere il bottone "AGGIUNGI NUOVO PRODOTTO"\\\\
+    \item premendo “AGGIUNGI NUOVO PRODOTTO” dal MENU’ viene visualizzata una schermata “NUOVO PRODOTTO” così organizzata:\\\\
     \includegraphics[scale=0.30]{Immagini/form/Form AggiuntaProd.jpg}
-    \\Da questa finestra potrà inserire nome e quantità relativi al prodotto e tramite il bottone "AGGIUNGI!" aggiungerlo al database.
+    \\Compilando i campi “nome prodotto” e “quantità” e premendo “AGGIUNGI!”, il nuovo prodotto verrà aggiunto alla dispensa.
 \end{itemize}
 \newpage
 \subsection{Ricette}
-Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "RICETTE"\\\\
+Premendo “RICETTE” dal MENU’ viene visualizzata una schermata “RICETTARIO” così strutturata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form GestioneRicette.jpg}
-\\Da questa finestra potrà:
+\\Da questa finestra:
 \begin{itemize}
-    \item premere il bottone "AGGIUNGI NUOVA RICETTA"\\\\
+    \item premendo “AGGIUNGI NUOVA RICETTA” dal RICETTARIO, così che venga visualizzata una schermata “NUOVA RICETTA” organizzata come segue:\\\\
     \includegraphics[scale=0.30]{Immagini/form/Form AggiungiRic.jpg}
-    \\Da questa finestra potrà inserire nome, preparazione, attrezzi e premere "CONTINUA" per inserire i prodotti relativi alla ricetta salvandoli tramite il bottone "SALVA PRODOTTO"\\\\
+    \\Nella definizione di una nuova ricetta vengono richieste le seguenti informazioni: nome, preparazione, attrezzi ed eventuali note. Premendo “CONTINUA” viene visualizzata una schermata “PRODOTTI DELLA RICETTA” così strutturata:\\\\
     \includegraphics[scale=0.30]{Immagini/form/Form AggiungiProdottiRicetta.jpg}
-    \\e per terminare l'inserimento dei prodotti e ultimare il salvataggio della ricetta premerà "TERMINA";
+    \\Compilando i campi e premendo “SALVA PRODOTTO”, si potranno aggiungere tutti i prodotti necessari alla preparazione della ricetta che si sta inserendo, premendo "TERMINA" si conclude il salvataggio della ricetta nel ricettario.
     \newpage
-    \item selezionare una ricetta presente nella lista schiacciandolo\\\\
+    \item selezionando il nome di una ricetta dal ricettario viene mostrata la schermata “MODIFICA RICETTA” così organizzata:\\\\
     \includegraphics[scale=0.30]{Immagini/form/Form Ricetta.jpg}
-    \\Da questa finestra potrà scegliere:
-        \subitem - di modificarne le note scrivendo nello spazio apposito e premendo il bottone "SALVA MODIFICHE";
-        \subitem - di eliminare la ricetta tramite il bottone "ELIMINA PRODOTTO";
-        \subitem - di preparare una birra inserendo nello spazio apposito il numero di litri (manualmente o tramite le freccine) e premendo "PREPARA QUESTA BIRRA"
+    \\Sono disponibili diverse funzioni:
+        \subitem - modificare le note sostituendo semplicemente quelle già presenti, salvando poi le modifiche premendo “SALVA MODIFICHE”;
+        \subitem - eliminare la ricetta premendo “ELIMINA RICETTA”;
+        \subitem - procedere con la preparazione di una birra selezionando i litri desiderati (manualmente o tramite le freccine), procedendo poi premendo “PREPARA QUESTA BIRRA”.
 \end{itemize}
 \subsection{Attrezzatura}
-Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "ATTREZZATURA"\\\\
+Premendo “ATTREZZATURA” dal MENU’ viene visualizzata una schermata “MAGAZZINO” così strutturata:\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form GestioneAttrezzatura.jpg}
-\\Da questa finestra potrà:
+\\Da questa finestra è possibile:
 \begin{itemize}
-    \item selezionare un attrezzo presente nella lista schiacciandolo\\\\
+    \item selezionare un attrezzo presente nella lista schiacciandone il nome dall'elenco visualizzato\\\\
     \includegraphics[scale=0.30]{Immagini/form/Form ModificaAtt.jpg}
-    \\Da questa finestra potrà scegliere:
+    \\e quindi scegliere:
         \subitem - di modificarne la capacità, scegliendo se inserire manualmente il numero oppure utilizzare le freccine, e premendo il bottone "SALVA MODIFICHE" salvare le modifiche apportate;
-        \subitem - di eliminare il prodotto tramite il bottone "ELIMINA ATTREZZO".
-    \item premere il bottone "AGGIUNGI NUOVO ATTREZZO"\\
+        \subitem - di eliminare l'attrezzo tramite il bottone "ELIMINA ATTREZZO".
+    \item aggiungere un nuovo attrezzo premendo “AGGIUNGI NUOVO ATTREZZO”\\\\
     \includegraphics[scale=0.30]{Immagini/form/Form AggiuntaAtt.jpg}
-    \\da questa finestra potrà inserire nome e quantità relativi all'attrezzo e tramite il bottone "AGGIUNGI!" aggiungerlo al database.
+    \\definendone nome e capacità e salvandolo premendo “AGGIUNGI!”, così da inserire il nuovo attrezzo nel magazzino.
 \end{itemize}
 \subsection{Lista della spesa}
-Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "LISTA DELLA SPESA"\\\\\
+Premendo “LISTA DELLA SPESA” dal MENU’ viene visualizzata una schermata così strutturata:\\\\\
 \includegraphics[scale=0.30]{Immagini/form/Form ListaSpesa.jpg}
-\\Da questa finestra potrà visualizzare la lista dei prodotti mancanti con le relative quantità e cancellarla tramite il bottone "HO FATTO LA SPESA".
+\\Sono visibili i prodotti che sono stati stati utilizzati nella preparazione di ricette le relative quantità. E’ possibile svuotarla premendo “HO FATTO LA SPESA”.
 \subsection{"Che birra faccio oggi?"}
-Una volta all'interno dell'applicazione, dalla finestra del menù, l'utente potrà premere il bottone "CHE BIRRA FACCIO OGGI?" che gli restituirà una finestra con il nome della birra e la quantità massima che è possibile preparare. La birra visualizzata sarà quella di cui è possibile preparare la maggior quantità considerando i prodotti presenti nel database.
+Premendo “CHE BIRRA FACCIO OGGI?” dal MENU’ viene visualizzato un messaggio che mostra il nome della birra (tra quelle presenti nel ricettario)  e la relativa quantità massima, di cui è possibile preparare la maggior quantità considerando i prodotti presenti nella dispensa.
 
 \newpage
 \section{Analisi}
 \subsection{Diagramma dei casi d'uso}
-Sono stati identificati otto casi d'uso che di seguito vengono illustrati nella forma dettagliata.
+Sono stati identificati otto casi d’uso. Di seguito viene riportato il diagramma ed una rappresentazione in forma dettagliata degli stessi.
 \vphantom{}
 \subsection{Casi d'uso}
 \vphantom{}
@@ -226,9 +224,9 @@ Sono stati identificati otto casi d'uso che di seguito vengono illustrati nella 
     PORTATA & Brew Day!\\\midrule
     LIVELLO & Gestione di ricette di birra artigianali\\\midrule
     ATTORE PRIMARIO & Utente\\\midrule
-    PARTI INTERESSATE E INTERESSI & L’attore Utente vuole visualizzare il proprio profilo, modificare informazioni o eliminarlo\\\midrule
+    PARTI INTERESSATE E INTERESSI & L’attore Utente vuole visualizzare il proprio profilo, modificare le credenziali o eliminarlo\\\midrule
     PRE-CONDIZIONI & Login\\\midrule
-    GARANZIA DI SUCCESSO & L’attore Utente riesce a visualizzare il proprio profilo, modificare informazioni o eliminarlo\\\midrule
+    GARANZIA DI SUCCESSO & L’attore Utente riesce a visualizzare il proprio profilo, modificare le credenziali o eliminarlo\\\midrule
     SCENARIO PRINCIPALE DI
     & 1) l’utente seleziona la voce "Profilo"\\
     SUCCESSO & 2) il sistema restituisce la schermata con i dati del profilo\\
@@ -397,13 +395,13 @@ Sono stati identificati otto casi d'uso che di seguito vengono illustrati nella 
 %%\begin{tabular}[c]{@{}l@{}} \end{tabular}\\\midrule
 \newpage
 \subsection{Diagramma delle classi a livello di Dominio}
-In questo diagramma sono presenti le classi implementate con i relativi attributi e viene mostrato come interagiscono tra loro.\\\\
+Con il seguente diagramma vengono rappresentate le classi implementate, inclusi gli attributi e le interazioni tra le stesse. \\\\
 \includegraphics[scale=0.50]{Immagini/Domain Model_Brew Day!_definitivo.png}
 \subsection{Diagramma delle classi a livello di Progettazione}
-In questo diagramma sono presenti tutte le classi implementate con i relativi attributi e metodi e viene mostrato come interagiscono tra loro.\\\\
+Con il seguente diagramma vengono rappresentate le classi implementate, inclusi gli attributi, i metodi e le interazioni tra le stesse. \\\\
 \includegraphics[scale=0.40]{Immagini/Design Model_Brew Day!_definitivo.png}
 \subsection{Diagramma dell'architettura software}
-In questo diagramma viene mostrata l'architettura dell'applicazione sviluppata.
+Con il seguente diagramma viene mostrata l'architettura dell'applicazione sviluppata.
 L'architettura richiama il modello MVC:
 \begin{itemize}
     \item Model: comprende le classi che strutturano l'applicazione;
@@ -414,32 +412,29 @@ L'architettura richiama il modello MVC:
 
 \newpage
 \subsection{Diagramma di sequenza}
-In questo diagramma viene mostrato l'intero funzionamento dell'applicazione.\\
-Si parte dalla fase di registrazione in cui si inserisce email e password, queste credenziali vengono, dopo i dovuti controlli, salvati nel database. Questo passaggio permette di creare un account per salvare i prodotti, gli attrezzi e le ricette appartenenti all'utente.\\
-Successivamente ci sarà la fase di login in cui, inserendo le proprie credenziali, si potrà accedere al menù principale dell'applicazione.\\
-Dal menù è possibile svolgere diverse operazioni, manipolando diversi campi:
+Con il seguente diagramma viene mostrato il funzionamento dell’intera applicazione. Con la fase di registrazione vengono inseriti email e password, dati che vengono poi controllati, in modo da non avere duplicati, e salvati nel database. Questo passaggio permette la creazione di un account, necessario per salvare e modificare prodotti, attrezzi e ricette dell’utente. Con la fase di login vengono richieste le credenziali definite in fase di registrazione, e solo dopo si potrà visualizzare il menu’ principale. Il menù mostra diverse funzionalità che possono essere classificate in:
 \begin{itemize}
     \item Profilo:
-        \subitem - modificare il proprio profilo cambiando la password;
-        \subitem - eliminare il proprio account.
+        \subitem - modificare il profilo cambiando la password;
+        \subitem - eliminare il profilo.
     \item Prodotti:
-        \subitem - aggiungere un nuovo prodotto con tutti i dati relativi ad esso (nome e quantità);
+        \subitem - aggiungere un nuovo prodotto al database definendone nome e quantità;
         \subitem - modificare la quantità di un prodotto esistente;
-        \subitem - eliminare un prodotto esistente.
+        \subitem - eliminare un prodotto dal database.
     \item Attrezzatura:
-        \subitem - aggiungere un nuovo attrezzo con tutti i dati relativi ad esso (nome e capacità);
+        \subitem - aggiungere un nuovo attrezzo al database definendone nome e capacità;
         \subitem - modificare la capacità di un attrezzo esistente
-        \subitem - eliminare un attrezzo esistente.\\
+        \subitem - eliminare un attrezzo dal database.\\
         In questa applicazione l'attrezzatura è puramente a scopo illustrativo. Questa sezione tiene solamente traccia degli attrezzi che si possiedono, non viene considerata per la preparazione di una ricetta o nella funzionalità "Che Birra Faccio Oggi?".
     \item Ricette:
-        \subitem - aggiungere una nuova ricetta con tutti i dati relativi ad essa (nome, elenco prodotti, elenco attrezzi, preparazione e note);
+        \subitem - aggiungere una nuova ricetta al database definendone nome, elenco prodotti, elenco attrezzi, preparazione e note;
         \subitem - modificare le note di una ricetta esistente;
-        \subitem - eliminare una ricetta esistente;
-        \subitem - preparare una ricetta inserendo la quantità.\\
+        \subitem - eliminare una ricetta dal database;
+        \subitem - preparare una ricetta inserendo la quantità. Con questa operazione la quantità dei prodotti necessaria alla preparazione della ricetta selezionata viene spostata dalla tabella 'prodotto' alla tabella 'listadellaspesa' presenti nel database.\\
         La modifica di una ricetta riguarda solo le note, in quanto si crede che una volta inserita questa non vari nel tempo, mentre è utile poter modificare le note che riportano un'informazione personale riguardante la ricetta.
     \item "Che Birra Faccio Oggi?":
         \subitem è una funzionalità speciale che permette di ottenere un consiglio riguardo la ricetta da preparare. La ricetta ottenuta grazie a questa funzionalità è quella di cui si possono fare più litri con i prodotti presenti in quel momento nella propria dispensa.\\
-        Questa funzionalità restituisce semplicemente un consiglio su quale birra produrre, mostrando nome e quantità massima supportata dai prodotti presenti in dispensa, poi sarà l'utente a scegliere quale ricetta e quanta prepararne.
+        Questa funzionalità restituisce semplicemente un consiglio su quale birra produrre, mostrando nome e quantità massima supportata dai prodotti presenti in dispensa, sarà poi facoltà dell’utente scegliere quale ricetta e quanta prepararne.
     \item Lista della spesa:
         \subitem è una funzionalità che permette di vedere quali prodotti mancano nella dispensa per poter preparare le varie ricette, una volta selezionata questa voce si visualizzerà la lista e si avrà la possibilità di cancellarla una volta comprato i prodotti.\\
         La lista della spesa viene solo visualizzata in modo che poi sia l'utente a scegliere cosa comprare e potrà in autonomia cancellare la lista ed aggiornate i prodotti.
@@ -452,13 +447,13 @@ Dal menù è possibile svolgere diverse operazioni, manipolando diversi campi:
 \newpage
 
 \subsection{Diagramma di sequenza di progettazione}
-Questo diagramma mostra in modo più specifico il funzionamento del caso d'uso gestioneRicette.\\\\\
+Con il seguente diagramma viene mostrato in maniera dettagliata il funzionamento del caso d’uso gestioneRicette.\\\\\
 \includegraphics[scale=0.43]{Immagini/Sequence Diagram gestioneRicette.png}
 \subsection{Diagramma di stato}
-Questo diagramma a stati mostra la funzionalità login.\\\\
+Con il seguente diagramma a stati viene mostrato il funzionamento del caso d'uso Login.\\\\
 \includegraphics[scale=0.60]{Immagini/State Machine Diagram Login_Brew Day!.png}
 \subsection{Diagramma di attività}
-Questo diagramma mostra mostra la funzionalità registrazione.\\\\
+Con il seguente diagramma viene mostrato il funzionamento del caso d'uso Registrazione.\\\\
 \includegraphics[scale=0.50]{Immagini/Activity Diagram Registrazione_Brew Day!.png}
 \subsection{Diagramma EER}
 Questo diagramma rappresenta la struttura del database creato come appoggio all'applicazione.\\\\
@@ -469,23 +464,23 @@ Questo diagramma rappresenta la struttura del database creato come appoggio all'
 \section{Pattern}
 \vphantom{}
 \subsection{Singleton}
-Questo pattern viene utilizzato dalla classe 'GestioneDB'. Questa classe ha il compito di svolgere tutte le operazioni che si interfacciano al database di supporto. Abbiamo introdotto questo pattern al fine di evitare errori di comunicazione, infatti è presente una sola classe mediatrice tra il database e le altre classi.\\\\
+Il pattern Singleton viene utilizzato dalla classe 'GestioneDB'. Questa classe ha il compito di svolgere tutte le operazioni che si interfacciano al database di supporto. Abbiamo introdotto questo pattern al fine di evitare errori di comunicazione, infatti è presente una sola classe mediatrice tra il database e le altre classi.\\\\
 \includegraphics[scale=0.80]{Immagini/Singleton.png}
 \subsection{Data Mapper}
-Questo pattern viene utilizzato nella creazione delle classi che rappresentano gli oggetti manipolati nel database.
+Il pattern Data Mapper viene utilizzato nella creazione delle classi che rappresentano gli oggetti manipolati nel database.
 E' stato rivisitato il suo utilizzo rendendolo più semplice togliendo uno step intermedio.
 Nel nostro caso vengono creati degli oggetti di tipo prodotto, ricetta e listaSpesa in modo da non dover richiedere ogni volta l'intervento del database.\\\\
 \includegraphics[scale=0.70]{Immagini/DataMapper.PNG}
 \newpage
 \subsection{Identity Field}
-Questo pattern è presente in tutte le tabelle del database, ma viene utilizzato in modo particolare nelle funzionalità inerenti alla tabella Ricetta.
+Il pattern Identity Field è presente in tutte le tabelle del database, ma viene utilizzato in modo particolare nelle funzionalità inerenti alla tabella Ricetta.
 La chiave primaria idRicetta viene utilizzata per richiamare i prodotti contenuti nella tabella 'prodricetta' per le funzionalità di preparazione di una ricetta e "Che birra faccio oggi?".\\\\
 \includegraphics[scale=0.40]{Immagini/IdentityField.jpg}
 \subsection{Association Table Mapping}
-Questo pattern viene utilizzato nella tabella 'prodricetta' come collegamento tra le tabelle 'ricetta' e 'prodotto'. All'interno del database non è presente come un'associazione molti-a-molti, viene però utilizzata in questo modo nell'implementazione.\\\\ 
+Il pattern Asssociation Table Mapping viene utilizzato nella tabella 'prodricetta' come collegamento tra le tabelle 'ricetta' e 'prodotto'. All'interno del database non è presente come un'associazione molti-a-molti, viene però utilizzata in questo modo nell'implementazione.\\\\ 
 \includegraphics[scale=0.40]{Immagini/AssociationTableMapping_.jpg}
 \subsection{Facade}
-Questo pattern è presente nella gestione delle finestre, l'utente preme il bottone e il metodo che svolge questa funzionalità è semplice e nasconde la complessità dell'utilizzo dell'applicazione.
+Il pattern Facade è presente nella gestione delle finestre, l'utente preme il bottone e il metodo che svolge questa funzionalità è semplice e nasconde la complessità dell'utilizzo dell'applicazione.
 \newpage
 
 \section{Analisi Understand}
@@ -499,7 +494,7 @@ E' stata individuata la classe 'GestioneDB' come la classe che "sa tutto". Essa 
 \subsection{Accumulate and fire}
 All'interno del progetto vengono usate variabili globali per facilitare la comunicazione tra le classi.
 \subsection{Copy and paste programming}
-All'interno del progetto sono presenti diversi metodi che svolgono la stessa funzione ma che è stato necessario implementare più volte perché comunicando con il database variava la tabella interessata;
+All’interno del progetto è possibile notare la presente di metodi diversi che svolgono la stessa funzione. Ciò è stato necessario perchè la comunicazione con il database richiedeva, anche per operazioni simili, query diverse per interpellare la tabella interessata.
 \subsection{Reinventing the wheet}
 E' stato usato un metodo già testato per effettuare la connessione con il database.
 
